--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                 que cambiarán el destino del mundo.
             </p>
         </div>
+
+        <!--jujutsu-->
+        <div class="anime">
+            <img src="https://m.media-amazon.com/images/I/81ZZj5dGzpS._AC_UF894,1000_QL80_.jpg" alt="">
+            <h2>Jujutsu Kaisen</h2>
+            <p>La trama de Jujutsu Kaisen sigue a Yuji Itadori, un estudiante de secundaria 
+                común y corriente con una fuerza sobrenatural impresionante. Después de un 
+                encuentro con maledictos, seres malvados que se alimentan de energía 
+                negativa, Yuji se ve involucrado en el mundo de la maldición</p>
+        </div>
     </section>
 </body>
 </html>
