fin de la clase

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                  fue cruelmente asesinada por un Demonio el cual convirtió a su hermana 
                  Nezuko en una de estas criaturas, obligando a Tanjirō a emprender un viaje 
                  para cazar a estos seres y de paso ayudar a su hermana a recuperar su 
-                 humanidad.</p>
+                 humanidad.</p> 
+            <p class="nota">8.5</p> 
         </div>
 
         <!--teminator 0-->
@@ -57,12 +58,31 @@
 
         <!--jujutsu-->
         <div class="anime">
-            <img src="https://m.media-amazon.com/images/I/81ZZj5dGzpS._AC_UF894,1000_QL80_.jpg" alt="">
+            <img src="https://m.media-amazon.com/images/I/81ZZj5dGzpS._AC_UF894,1000_QL80_.jpg" alt="Jujutsu">
             <h2>Jujutsu Kaisen</h2>
             <p>La trama de Jujutsu Kaisen sigue a Yuji Itadori, un estudiante de secundaria 
                 común y corriente con una fuerza sobrenatural impresionante. Después de un 
                 encuentro con maledictos, seres malvados que se alimentan de energía 
                 negativa, Yuji se ve involucrado en el mundo de la maldición</p>
+        </div>
+
+        <!--BHA-->
+        <div class="anime">
+            <img src="https://i.pinimg.com/564x/84/b3/57/84b357c31978fd13d54873a066741655.jpg" alt="bnha">
+            <h2>Boku no Hero Academia</h2>
+            <p>En un mundo donde tener superpoderes es lo más común, nace Izuku Midoriya, 
+                un niño sin este don que sueña con ser un superhéroe. La gente con este 
+                tipo de habilidades es conocida como 'Quirk' y, debido a no pertenecer a 
+                esta clase, Izuku sufre bullying en su escuela por ser diferente.</p>
+        </div>
+
+        <div class="anime">
+            <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=480,height=720/catalog/crunchyroll/d8eed44e3d48097ab5fd36b6815fc18e.jpg" alt="saitama">
+            <h2>One punch man</h2>
+            <p>One Punch Man sigue la historia de Saitama, un héroe increíblemente poderoso 
+                que puede derrotar a cualquier enemigo de un solo golpe. A pesar de su fuerza,
+                 Saitama se siente aburrido y frustrado por la falta de desafíos en 
+                su vida, ya que ningún oponente está a su altura.</p>
         </div>
     </section>
 </body>
